--- a/url_json_parse.html
+++ b/url_json_parse.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <h3>Html / Javasctipt test</h3>
-    <label for='url'>Url:<label><input type='textbox' id='url' />
+    <input type='text' id='url' placeholder='URL' />
     <input id='submit' type='submit' />
-    <table id='resultTable' border='1' align='center' >
+    <table id='resultTable'>
     </table>
     <script>
       document.getElementById('submit').addEventListener('click', function() {
@@ -57,13 +57,60 @@
       }
 
       var insertFullRow = function(table, tds, header=false) {
-        var baseNode = header ? table.createTHead() : table;
-        var row = baseNode.insertRow();
+        var row = table.insertRow();
         tds.forEach(function(td){
-          let cell = row.insertCell();
-          cell.innerHTML = td
+          if (header) {
+            let headerCell = document.createElement("TH");
+            headerCell.innerHTML = td;
+            row.appendChild(headerCell);
+          } else {
+            let cell = row.insertCell();
+            cell.innerHTML = td
+          }
         });
       }
     </script>
+    <style>
+      body {
+        font-family: 'Open Sans', sans-serif;
+      }
+      table {
+        margin-top: 3%;
+      }
+      th, td {
+        padding: 10px;
+        text-align: left;
+      }
+      th {
+        text-transform: uppercase;
+        background-color: #8ac154;
+        color: white;
+        font-weight: normal;
+      }
+      input[type="text"] {
+        background: #ffffff;
+        -moz-border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px 3px 3px 3px;
+        border-radius: 3px;
+        color: #757575;
+        display: block;
+        font: 1.4rem "Lato", sans-serif;
+        margin: 0 0 8px;
+        min-height: auto !important;
+        padding: 5px 6px 5px 10px;
+        width: 90% !important;
+        float: left;
+      }
+      input[type=submit] {
+        background: #8ac154;
+        font: 1.4rem "Lato", sans-serif;
+        cursor: pointer;
+        padding: 5px 15px;
+        color: white;
+        float: left;
+      }
+      tr:hover {background-color: #f5f5f5;}
+      tr:nth-child(even) {background-color: #f2f2f2;}
+    </style>
   </body>
 </html>
