--- a/url_json_parse.html
+++ b/url_json_parse.html
@@ -4,12 +4,15 @@
   </head>
   <body>
     <h3>Html / Javasctipt test</h3>
-    <input type='text' id='url' placeholder='URL' />
-    <input id='submit' type='submit' />
+    <form id='url_form'>
+      <input type='text' id='url' placeholder='URL' />
+      <input type='submit' />
+    </form>
     <table id='resultTable'>
     </table>
     <script>
-      document.getElementById('submit').addEventListener('click', function() {
+      document.getElementById('url_form').addEventListener('submit', function(e) {
+        e.preventDefault();
         let resultTable = document.getElementById('resultTable');
         resultTable.innerText = '';
         let url = document.getElementById('url').value;
